--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </nav>
-
+#this is supposed to be a comment
     <!-- Hero Section -->
     <section class="hero-bg h-screen flex flex-col justify-center items-center text-center text-white relative">
         <div class="absolute inset-0 bg-black bg-opacity-50"></div>
